[project]
name = "sms-forwarder-telegram-webhook"
version = "0.1.0"
description = "Receive SMS webhooks and forward them to Telegram chats/channels."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.10.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = false
